--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.5"
-  }
+  },
+  "homepage": "https://marycrisestudillo.github.io/WeddingInvitation/"
 }
