--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://marycrisestudillo.github.io/WeddingInvitation",
   "name": "weddinginvitation",
   "version": "0.1.0",
   "private": true,
@@ -46,6 +47,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.5"
-  },
-  "homepage": "https://marycrisestudillo.github.io/WeddingInvitation/"
+  }
 }
