--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marycrisestudillo.github.io/WeddingInvitation",
+  "homepage": "https://marycrisestudillo.github.io/WeddingInvitation/",
   "name": "weddinginvitation",
   "version": "0.1.0",
   "private": true,
